@@ -1,0 +1,25 @@
+<!DOCTYPE node PUBLIC "-//freedesktop//DTD D-BUS Object Introspection 1.0//EN"
+"http://www.freedesktop.org/standards/dbus/1.0/introspect.dtd">
+
+
+<node>
+    <interface name="org.mpris.MediaPlayer2">
+        <method name="Raise"/>
+
+        <method name="Quit"/>
+
+        <property name="CanQuit" type="b" access="read"/>
+
+        <property name="CanRaise" type="b" access="read"/>
+
+        <property name="HasTrackList" type="b" access="read"/>
+
+        <property name="Identity" type="s" access="read"/>
+
+        <property name="DesktopEntry" type="s" access="read"/>
+
+        <property name="SupportedUriSchemes" type="as" access="read"/>
+
+        <property name="SupportedMimeTypes" type="as" access="read"/>
+    </interface>
+</node>
